Send vm request message to data center manager

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -66,39 +66,23 @@ ScenarioTest.cloudProvider.checkReservedFirst = true
 ###-----------------------------------------------------------------
 ###-.-  Configuration of DataCenter_A
 ###-----------------------------------------------------------------
-ScenarioTest.dc_DataCenter_A_000.dcManager.dataCenterConfig = "DataCenter_A 2 2 Rack_A 1 10 Node_A 500 4.0 4 60000 2 Rack_B 1 8 Node_B 1000 1.0 4 60000 0"
+ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 1 Rack_A 1 1 Node_A 500 8.0 4 60000 1 0 Rack_B 1 4 Node_B 2000 16.0 2 52500 "
 
 	## ---------------------------------------------------------------
 	##   Configuration of rack(s) rackCmp_Rack_A_*
 	## ---------------------------------------------------------------
 
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.channelType = "DataCenterEth1G_channel"
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.numBoards = 4
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.bladesPerBoard = 8
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].staticAppAssignment = false
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].isVirtualHardware = true
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].maxUsers = 4
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 4
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 4
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].speed = 60000
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].tick = 0.01s
-	ScenarioTest.dc_DataCenter_A_000.rackCmp_Rack_A_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
-
-	## ---------------------------------------------------------------
-	##   Configuration of rack(s) rackSto_Rack_B_*
-	## ---------------------------------------------------------------
-
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.channelType = "DataCenterEth1G_channel"
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.numBoards = 1
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.bladesPerBoard = 4
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].staticAppAssignment = false
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].isVirtualHardware = true
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].maxUsers = 2
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].maxVMs = 2
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].numCpuCores = 2
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].cpu.cpuCore[*].speed = 52500
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].cpu.cpuCore[*].tick = 0.01s
-	ScenarioTest.dc_DataCenter_A_000.rackSto_Rack_B_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.channelType = "DataCenterEth1G_channel"
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 4
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].staticAppAssignment = false
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].isVirtualHardware = true
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxUsers = 4
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 4
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 4
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].speed = 60000
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].tick = 0.01s
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
 
 
 #MR1 test case 1
