--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -85,6 +85,13 @@ ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 1 Ra
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
 
 
+
+#MR1 test case 1
+[Config test]
+ScenarioTest.userList = "1 User_A 1 1 AppCPUIntensive 1 1 VM_small 1 2 "
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 4 4 Node_A 500 8.0 4 60000 1 0 Rack_B 1 4 Node_B 2000 16.0 2 52500 "
+ScenarioTest.userGenerator.distribution = 60.5s
+
 #MR1 test case 1
 [Config test_mr1]
 ScenarioTest.userList = "1 User_A ${users=1..1000 step 1} 1 AppDataIntensive 1 1 VM_small 1 2 "
