Cloud base functionallity

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -16,15 +16,15 @@ ned-path = ../../src;../;
 cmdenv-log-prefix = "(%t):[%l] %m  "
 
 ## Allow to examine details of recorded history of a simulation, focusing on the behavior instead of the statistical results.
-record-eventlog = true
-**.module-eventlog-recording = true
+record-eventlog = false
+**.module-eventlog-recording = false
 eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
 
 ## Recording of simulation results - recordScalar() - recordStatistic()
-**.statistic-recording = true  ## from a @statistic in ned file
-**.scalar-recording = true ## scalar or a statistic object (cStdDev to record summary statistics)
-**.vector-recording = true ## output vector (recorded using cOutVector objects)
-**.bin-recording = true ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
+**.statistic-recording = false  ## from a @statistic in ned file
+**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
+**.vector-recording = false ## output vector (recorded using cOutVector objects)
+**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
 
 ## Random seeds fix
 seed-set = 0
@@ -57,7 +57,7 @@ ScenarioTest.userGenerator.distribution = 0s
 ScenarioTest.userGenerator.maxStartTime_t1 = 100000000
 ScenarioTest.userGenerator.nRentTime_t2 = 10000
 ScenarioTest.userGenerator.maxSubTime_t3 = 55000
-ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 4000
+# ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 15000
 #ScenarioTest.userGenerator.offerAcceptanceDistribution = uniform(0.0,1.0)
 ScenarioTest.userGenerator.offerCostIncrease = 0.9
 ScenarioTest.cloudProvider.checkReservedFirst = true
@@ -73,22 +73,33 @@ ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 1 Ra
 	## ---------------------------------------------------------------
 
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.channelType = "DataCenterEth1G_channel"
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 4
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 1
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 1
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].staticAppAssignment = false
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].isVirtualHardware = true
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxUsers = 4
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 4
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 4
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxUsers = 1
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 1
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 1
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].speed = 60000
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].tick = 0.01s
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].tick = 1s
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memorySize = 5
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryReadLatency = 5
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryWriteLatency = 5
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskSize = 5
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskReadBandwidth = 5
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskWriteBandwidth = 5
 
 
 
 #MR1 test case 1
 [Config test]
-ScenarioTest.userList = "1 User_A 1 1 AppCPUIntensive 1 1 VM_small 1 2 "
+ScenarioTest.userList = "1 User_A 2 1 AppCPUIntensive 1 1 VM_small 1 1 "
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 1 Rack_A 1 1 Node_A 500 8.0 1 60000 1 0 Rack_B 1 4 Node_B 2000 16.0 2 52500 "
+ScenarioTest.userGenerator.distribution = 0s
+
+[Config test1]
+ScenarioTest.userList = "1 User_A 100 2 AppCPUIntensive 1 AppCPUIntensive 1 1 VM_small 2 1 "
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 4 4 Node_A 500 8.0 4 60000 1 0 Rack_B 1 4 Node_B 2000 16.0 2 52500 "
 ScenarioTest.userGenerator.distribution = 60.5s
 
