--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -34,7 +34,7 @@ seed-0-mt = 0
 ################################################################
 ###  Configuration of Cloud provider:CloudProviderFirstFit
 ################################################################
-ScenarioTest.appList = "2 LocalApplication AppCPUIntensive 6 inputDataSize int MiB 10 outputDataSize int MiB 5 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 500000 iterations int - 5 LocalApplication AppDataIntensive 6 inputDataSize int MiB 50 outputDataSize int MiB 75 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 1000 iterations int - 5 "
+ScenarioTest.appList = "2 LocalApplication AppCPUIntensive 6 inputDataSize int MiB 10 outputDataSize int MiB 5 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 500000 iterations int - 5 LocalApplication AppDataIntensive 6 inputDataSize int MiB 5000 outputDataSize int MiB 7500 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 1000 iterations int - 5 "
 #numVMs | VMType cost numCores SCU DiskGB memoryGB
 ScenarioTest.vmList = "10 VM_4xlarge 23.0 16 16.0 1000.0 64.0 VM_2xlarge 23.0 8 8.0 1000.0 32.0 VM_xlarge 23.0 4 4.0 1000.0 16.0 VM_large 23.0 4 4.0 1000.0 8.0 VM_medium 15.0 2 2.0 500.0 4.0 VM_small 15.0 1 1.0 250.0 2.0 VM_micro 15.0 1 1.0 100.0 1.0 VM_nanoHD 15.0 1 1.0 500.0 0.5 VM_nanoRAM 15.0 1 1.0 100.0 2.0 VM_nano 15.0 1 1.0 100.0 0.5 "
 ## 20% discount
@@ -83,25 +83,35 @@ ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 1 Ra
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].speed = 60000
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].tick = 1s
 	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memorySize = 5
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryReadLatency = 5
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryWriteLatency = 5
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskSize = 5
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskReadBandwidth = 5
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskWriteBandwidth = 5
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memorySize = 8GB
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryReadLatency = 5us
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryWriteLatency = 5us
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskSize = 500GB
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskReadBandwidth = 500Mbps
+	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskWriteBandwidth = 500Mbps
 
 
 
 #MR1 test case 1
 [Config test]
-ScenarioTest.userList = "1 User_A 2 1 AppCPUIntensive 1 1 VM_small 1 1 "
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 1
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 1
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxUsers = 1
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 1
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 1
+ScenarioTest.userList = "1 User_A 1 1 AppDataIntensive 1 1 VM_small 1 1 "
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 1 Rack_A 1 1 Node_A 500 8.0 1 60000 1 0 Rack_B 1 4 Node_B 2000 16.0 2 52500 "
 ScenarioTest.userGenerator.distribution = 0s
 
 [Config test1]
-ScenarioTest.userList = "1 User_A 100 2 AppCPUIntensive 1 AppCPUIntensive 1 1 VM_small 2 1 "
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 4
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxUsers = 4
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 4
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 4
+ScenarioTest.userList = "1 User_A 100 2 AppDataIntensive 1 AppCPUIntensive 1 1 VM_small 2 1 "
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 4 4 Node_A 500 8.0 4 60000 1 0 Rack_B 1 4 Node_B 2000 16.0 2 52500 "
-ScenarioTest.userGenerator.distribution = 60.5s
+#ScenarioTest.userGenerator.distribution = 60.5s
 
 #MR1 test case 1
 [Config test_mr1]
