Added disk bandwidth

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -111,7 +111,7 @@ ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 4
 ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 4
 ScenarioTest.userList = "1 User_A 100 2 AppDataIntensive 1 AppCPUIntensive 1 1 VM_small 2 1 "
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 4 4 Node_A 500 8.0 4 60000 1 0 Rack_B 1 4 Node_B 2000 16.0 2 52500 "
-#ScenarioTest.userGenerator.distribution = 60.5s
+ScenarioTest.userGenerator.distribution = 60.5s
 
 #MR1 test case 1
 [Config test_mr1]
