--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -60,8 +60,8 @@ ScenarioTest.userList = "1 User_A Priority Slai05d02c03 1 1 AppDataIntensive 1 1
 ###  Configuration of User Generator:
 ################################################################
 ScenarioTest.userGenerator.allUsersArriveAtOnce = false
-ScenarioTest.userGenerator.intervalBetweenUsers = false
-#ScenarioTest.userGenerator.distribution = uniform(0d,7d)
+ScenarioTest.userGenerator.intervalBetweenUsers = true
+ScenarioTest.userGenerator.distribution = uniform(55s,60s)
 ScenarioTest.userGenerator.maxStartTime_t1 = 100000000
 ScenarioTest.userGenerator.nRentTime_t2 = 10000
 ScenarioTest.userGenerator.maxSubTime_t3 = 55000
@@ -69,10 +69,10 @@ ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 86400
 ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
 ScenarioTest.userGenerator.offerCostIncrease = 0.5
 
-ScenarioTest.userGenerator.intervalBetweenUsers = false
+#ScenarioTest.userGenerator.intervalBetweenUsers = false
+#ScenarioTest.userGenerator.distribution = uniform(0d,7d)
 #ScenarioTest.userGenerator.numberOfCycles = 7
 #ScenarioTest.userGenerator.durationOfCycle = 1d
-ScenarioTest.userGenerator.distribution = uniform(0d,7d)
 #ScenarioTest.userGenerator.distribution = truncnormal(12h,3h)
 #ScenarioTest.userGenerator.cycleDistribution = intuniform(1,7)
 #ScenarioTest.userGenerator.isolateCycle = false
@@ -154,8 +154,10 @@ ScenarioTest.userList = "10 User_A 5000 1 AppDataIntensive 1 1 VM_small 5 2 User
 ScenarioTest.userList = "10 User_A ${reg} 1 AppDataIntensive 1 1 VM_small 5 2 User_B ${reg} 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C ${reg} 1 AppDataIntensive 1 1 VM_medium 2 2 User_D ${reg} 1 AppDataIntensive 1 1 VM_medium 50 2 User_E ${reg} 1 AppDataIntensive 1 1 VM_large 1 10 User_F ${reg} 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G ${reg} 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H ${reg} 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I ${reg} 1 AppDataIntensive 1 1 VM_nano 1 1 User_J ${reg} 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
 [Config workload_3]
+ScenarioTest.userList = "10 User_A 500 1 AppDataIntensive 1 1 VM_small 5 2 User_B 1500 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 1000 1 AppDataIntensive 1 1 VM_medium 2 2 User_D 2000 1 AppDataIntensive 1 1 VM_medium 50 2 User_E 100 1 AppDataIntensive 1 1 VM_large 1 10 User_F 900 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G 500 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H 500 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I 1000 1 AppDataIntensive 1 1 VM_nano 1 1 User_J 2000 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
 [Config workload_4]
+ScenarioTest.userList = "10 User_A 1 1 AppDataIntensive 1 1 VM_small 5 2 User_B 2490 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 10 1 AppDataIntensive 1 1 VM_medium 2 2 User_D 1500 1 AppDataIntensive 1 1 VM_medium 50 2 User_E 100 1 AppDataIntensive 1 1 VM_large 1 10 User_F 1799 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G 500 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H 100 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I 500 1 AppDataIntensive 1 1 VM_nano 1 1 User_J 3000 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
 [Config workload_2k]
 **.bara = ${reg= 200}
@@ -173,7 +175,28 @@ ScenarioTest.userList = "10 User_A ${reg} 1 AppDataIntensive 1 1 VM_small 5 2 Us
 **.bara = ${reg=1500}
 ScenarioTest.userList = "10 User_A ${reg} 1 AppDataIntensive 1 1 VM_small 5 2 User_B ${reg} 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C ${reg} 1 AppDataIntensive 1 1 VM_medium 2 2 User_D ${reg} 1 AppDataIntensive 1 1 VM_medium 50 2 User_E ${reg} 1 AppDataIntensive 1 1 VM_large 1 10 User_F ${reg} 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G ${reg} 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H ${reg} 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I ${reg} 1 AppDataIntensive 1 1 VM_nano 1 1 User_J ${reg} 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
+[Config sub_3h_240h]
+ScenarioTest.userGenerator.maxSubscriptionTime_t4 = ${10800,18000,36000,864000}
+
+[Config sub_3h]
+ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 10800
+
+[Config sub_5h]
+ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 18000
+
+[Config sub_10h]
+ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 36000
+
+[Config sub_240h]
+ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 864000
+
 ### DATACENTER
+[Config dc_n128_n1024]
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A ${n=8,16,32,64} 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = ${n}
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+
 [Config dc_n128]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
@@ -193,16 +216,16 @@ ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 24
 ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
 
 [Config dc_n512]
-ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 16 16 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 32 8 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 16 16 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 16
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 16
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 32
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
 
 [Config dc_n1024]
-ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 32 16 Node_A 500 64.0 4 60000 0 0 "
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 64 8 Node_A 500 64.0 4 60000 0 0 "
 ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 32 16 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 32
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 16
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 64
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
 
 ###rRESERVATION ORDER
 [Config normal_first]
@@ -215,44 +238,103 @@ ScenarioTest.cloudProvider.checkReservedFirst = true
 
 ############# SIMCAN2CLOUD CONFIGS ##################
 
-[Config test_w1n128]
-extends = workload_1, dc_n128, normal_first
+[Config test_w1n128n1024s3s240]
+extends = workload_1, dc_n128_n1024, sub_3h_240h
 
-[Config test_w1n256]
-extends = workload_1, dc_n256, normal_first
+[Config test_w2n128n1024s3s240]
+extends = workload_2, dc_n128_n1024, sub_3h_240h
 
-[Config test_w1n512]
-extends = workload_1, dc_n512, normal_first
+[Config test_w3n128n1024s3s240]
+extends = workload_3, dc_n128_n1024, sub_3h_240h
 
-
-[Config test_w2n128]
-extends = workload_2, dc_n128, normal_first
-
-[Config test_w2n256]
-extends = workload_2, dc_n256, normal_first
-
-[Config test_w2n512]
-extends = workload_2, dc_n512, normal_first
+[Config test_w4n128n1024s3s240]
+extends = workload_4, dc_n128_n1024, sub_3h_240h
 
 
-[Config test_w3n128]
-extends = workload_3, dc_n128, normal_first
+[Config test_w1n128s3]
+extends = workload_1, dc_n128, sub_3h
 
-[Config test_w3n256]
-extends = workload_3, dc_n256, normal_first
+[Config test_w1n256s3]
+extends = workload_1, dc_n256, sub_3h
 
-[Config test_w3n512]
-extends = workload_3, dc_n512, normal_first
+[Config test_w1n512s3]
+extends = workload_1, dc_n512, sub_3h
 
 
-[Config test_w4n128]
-extends = workload_4, dc_n128, normal_first
+[Config test_w2n128s3]
+extends = workload_2, dc_n128, sub_3h
 
-[Config test_w4n256]
-extends = workload_4, dc_n256, normal_first
+[Config test_w2n256s3]
+extends = workload_2, dc_n256, sub_3h
 
-[Config test_w4n512]
-extends = workload_4, dc_n512, normal_first
+[Config test_w2n512s3]
+extends = workload_2, dc_n512, sub_3h
+
+
+[Config test_w3n128s3]
+extends = workload_3, dc_n128, sub_3h
+
+[Config test_w3n256s3]
+extends = workload_3, dc_n256, sub_3h
+
+[Config test_w3n512s3]
+extends = workload_3, dc_n512, sub_3h
+
+
+[Config test_w4n128s3]
+extends = workload_4, dc_n128, sub_3h
+
+[Config test_w4n256s3]
+extends = workload_4, dc_n256, sub_3h
+
+[Config test_w4n512s3]
+extends = workload_4, dc_n512, sub_3h
+
+
+
+
+[Config test_w1n128s5]
+extends = workload_1, dc_n128, sub_5h
+
+[Config test_w1n256s5]
+extends = workload_1, dc_n256, sub_5h
+
+[Config test_w1n512s5]
+extends = workload_1, dc_n512, sub_5h
+
+
+[Config test_w2n128s5]
+extends = workload_2, dc_n128, sub_5h
+
+[Config test_w2n256s5]
+extends = workload_2, dc_n256, sub_5h
+
+[Config test_w2n512s5]
+extends = workload_2, dc_n512, sub_5h
+
+
+[Config test_w3n128s5]
+extends = workload_3, dc_n128, sub_5h
+
+[Config test_w3n256s5]
+extends = workload_3, dc_n256, sub_5h
+
+[Config test_w3n512s5]
+extends = workload_3, dc_n512, sub_5h
+
+
+[Config test_w4n128s5]
+extends = workload_4, dc_n128, sub_5h
+
+[Config test_w4n256s5]
+extends = workload_4, dc_n256, sub_5h
+
+[Config test_w4n512s5]
+extends = workload_4, dc_n512, sub_5h
+
+
+
+
 
 
 
