--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -239,16 +239,16 @@ ScenarioTest.cloudProvider.checkReservedFirst = true
 ############# SIMCAN2CLOUD CONFIGS ##################
 
 [Config test_w1n128n1024s3s240]
-extends = workload_1, sub_3h_240h, dc_n128_n1024
+extends = workload_1, dc_n128_n1024, sub_3h_240h
 
 [Config test_w2n128n1024s3s240]
-extends = workload_2, sub_3h_240h, dc_n128_n1024
+extends = workload_2, dc_n128_n1024, sub_3h_240h
 
 [Config test_w3n128n1024s3s240]
-extends = workload_3, sub_3h_240h, dc_n128_n1024
+extends = workload_3, dc_n128_n1024, sub_3h_240h
 
 [Config test_w4n128n1024s3s240]
-extends = workload_4, sub_3h_240h, dc_n128_n1024
+extends = workload_4, dc_n128_n1024, sub_3h_240h
 
 
 [Config test_w1n128s3]
