--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -190,6 +190,9 @@ ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 36000
 [Config sub_240h]
 ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 864000
 
+[Config exponencial]
+ScenarioTest.userGenerator.distribution = exponential(60.5s)
+
 ### DATACENTER
 [Config dc_n128_n1024]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A ${n=8,16,32,64} 8 Node_A 500 64.0 4 60000 0 "
@@ -237,6 +240,18 @@ ScenarioTest.cloudProvider.checkReservedFirst = true
 ###END BASE CONFIGS###
 
 ############# SIMCAN2CLOUD CONFIGS ##################
+[Config test_w1n128n1024s3s240e]
+extends = workload_1, dc_n128_n1024, sub_3h_240h, exponencial
+
+[Config test_w2n128n1024s3s240e]
+extends = workload_2, dc_n128_n1024, sub_3h_240h, exponencial
+
+[Config test_w3n128n1024s3s240e]
+extends = workload_3, dc_n128_n1024, sub_3h_240h, exponencial
+
+[Config test_w4n128n1024s3s240e]
+extends = workload_4, dc_n128_n1024, sub_3h_240h, exponencial
+
 
 [Config test_w1n128n1024s3s240]
 extends = workload_1, dc_n128_n1024, sub_3h_240h
