Added cpu stats

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -17,6 +17,7 @@ ned-path = ../../src;../;
 ## Log
 **.cloudProvider.cmdenv-log-level = off
 **.userGenerator.cmdenv-log-level = error
+**.dcManager.cmdenv-log-level = error
 **.cmdenv-log-level = off	## off, error, info, debug and trace
 cmdenv-log-prefix = "(%t):[%l] %m  "
 
@@ -134,7 +135,8 @@ ScenarioTest.userGenerator.offerCostIncrease = 0.5
 	## ---------------------------------------------------------------
 
 [Config test_prueba] #1u-1h,1u-2h,2u-1h,2-1h,...
-ScenarioTest.userList = "1 User_A Priority Slai05d02c03 ${users=1,2,3,4} 1 AppDataIntensive 1 1 VM_medium 1 ${time=1,2}"
+extends = dc_n128
+ScenarioTest.userList = "1 User_A ${users=1,2,3,4} 1 AppDataIntensive 1 1 VM_medium 1 ${time=1,2}"
 
 [Config test_prueba2]
 ScenarioTest.userList = "1 User_A Priority Slai05d02c03 ${users=1,20,40,60,80,100,120,140,160,180,200,220,240,260,280,300,320,340,360,380,400} 1 AppDataIntensive 1 1 VM_medium 1 1"
