Added new configs

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -232,16 +232,37 @@ ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Ra
 ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 64
 ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
 
-###rRESERVATION ORDER
+###RESERVATION ORDER
 [Config normal_first]
 ScenarioTest.cloudProvider.checkReservedFirst = false
 
 [Config reserved_first]
 ScenarioTest.cloudProvider.checkReservedFirst = true
 
+###CPU SPEED
+[Config cpu_40000_60000]
+ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].speed = ${40000,50000,60000,70000}
+
 ###END BASE CONFIGS###
 
 ############# SIMCAN2CLOUD CONFIGS ##################
+
+#### Cpu speed and nodes
+
+[Config test_w1s10hcpu40000cpu60000e]
+extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+
+[Config test_w2s10hcpu40000cpu60000e]
+extends = workload_2, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+
+[Config test_w3s10hcpu40000cpu60000e]
+extends = workload_3, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+
+[Config test_w4s10hcpu40000cpu60000e]
+extends = workload_4, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+
+##### Subtime and nodes
+
 [Config test_w1n128n1024s3s240e]
 extends = workload_1, sub_3h_240h, dc_n128_n1024, exponencial
 
