--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -42,7 +42,7 @@ seed-0-mt = 0
 ################################################################
 
 #numApps | TypeInstanceApp NameInstanceApp NumParams {inputDataSize,outputDatSize,inputFile,outputFile,MIs,iterations}
-ScenarioTest.appList = "2 LocalApplication AppCPUIntensive 6 inputDataSize int MiB 10 outputDataSize int MiB 5 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 500000 iterations int - 5 LocalApplication AppDataIntensive 6 inputDataSize int MiB 50 outputDataSize int MiB 75 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 1000 iterations int - 5 "
+ScenarioTest.appList = "2 LocalApplication AppCPUIntensive 6 inputDataSize int MiB 10 outputDataSize int MiB 5 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 79200000 iterations int - 5 LocalApplication AppDataIntensive 6 inputDataSize int MiB 50 outputDataSize int MiB 75 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 1000 iterations int - 5 "
 
 #numVMs | VMType(name) cost numCores SCU DiskGB memoryGB
 ScenarioTest.vmList = "10 VM_4xlarge 23.0 16 16.0 1000.0 64.0 VM_2xlarge 23.0 8 8.0 1000.0 32.0 VM_xlarge 23.0 4 4.0 1000.0 16.0 VM_large 23.0 4 4.0 1000.0 8.0 VM_medium 15.0 2 2.0 500.0 4.0 VM_small 15.0 1 1.0 250.0 2.0 VM_micro 15.0 1 1.0 100.0 1.0 VM_nanoHD 15.0 1 1.0 500.0 0.5 VM_nanoRAM 15.0 1 1.0 100.0 2.0 VM_nano 15.0 1 1.0 100.0 0.5 "
@@ -84,45 +84,45 @@ ScenarioTest.userGenerator.offerCostIncrease = 0.5
 ###-.-  Configuration of DataCenter_A
 ###-----------------------------------------------------------------
 
-#ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 2 2 Rack_A 1 10 Node_A 500 64.0 4 60000 2 Rack_B 1 8 Node_B 1000 1.0 4 60000 0"
+#ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 2 2 Rack_A 1 10 Node_A 500 64.0 4 60000 2 Rack_B 1 8 Node_B 1000 1.0 4 60000 0"
 
 	## ---------------------------------------------------------------
-	##   Configuration of rack(s) rackCmp_Rack_A_*
+	##   Configuration of rack(s) rackCmp_Rack_A[*]
 	## ---------------------------------------------------------------
 
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.channelType = "DataCenterEth1G_channel"
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 4
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].staticAppAssignment = false
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].isVirtualHardware = true
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxUsers = 4
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].maxVMs = 4
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].numCpuCores = 4
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].speed = 60000
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].tick = 1s
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memorySize = 64GB
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryReadLatency = 5us
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].memoryWriteLatency = 5us
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskSize = 500GB
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskReadBandwidth = 500Mbps
-	ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].diskWriteBandwidth = 500Mbps
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].channelType = "DataCenterEth1G_channel"
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 4
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].staticAppAssignment = false
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].isVirtualHardware = true
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].maxUsers = 4
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].maxVMs = 4
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].numCpuCores = 4
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 60000
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].tick = 1s
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].memorySize = 64GB
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].memoryReadLatency = 5us
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].memoryWriteLatency = 5us
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].diskSize = 500GB
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].diskReadBandwidth = 500Mbps
+	ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].diskWriteBandwidth = 500Mbps
 
 	## ---------------------------------------------------------------v
-	##   Configuration of rack(s) rackSto_Rack_B_*
+	##   Configuration of rack(s) rackSto_Rack_B[*]
 	## ---------------------------------------------------------------
 
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.channelType = "DataCenterEth1G_channel"
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.numBoards = 1
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.bladesPerBoard = 4
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].staticAppAssignment = false
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].isVirtualHardware = true
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].maxUsers = 2
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].maxVMs = 2
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].numCpuCores = 2
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].cpu.cpuCore[*].speed = 52500
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].cpu.cpuCore[*].tick = 1s
-	ScenarioTest.dc_DataCenter_A_0.rackSto_Rack_B_*.board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].channelType = "DataCenterEth1G_channel"
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].numBoards = 1
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].bladesPerBoard = 4
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].staticAppAssignment = false
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].isVirtualHardware = true
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].maxUsers = 2
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].maxVMs = 2
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].numCpuCores = 2
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].cpu.cpuCore[*].speed = 52500
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].cpu.cpuCore[*].tick = 1s
+	ScenarioTest.dc_DataCenter_A[*].rackSto_Rack_B[*].board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
 
 	## ---------------------------------------------------------------------------------------------------------------------
 	##   General Configuration: Atención en primera instancia de usuarios prioritarios en maquinas regulares o reservadas.
@@ -136,7 +136,7 @@ ScenarioTest.userGenerator.offerCostIncrease = 0.5
 
 [Config test_prueba] #1u-1h,1u-2h,2u-1h,2-1h,...
 extends = dc_n128
-ScenarioTest.userList = "1 User_A ${users=1,2,3,4} 1 AppDataIntensive 1 1 VM_medium 1 ${time=1,2}"
+ScenarioTest.userList = "1 User_A ${users=1,2,3,4} 1 AppCPUIntensive 1 1 VM_medium 1 ${time=1,2}"
 
 [Config test_prueba2]
 ScenarioTest.userList = "1 User_A Priority Slai05d02c03 ${users=1,20,40,60,80,100,120,140,160,180,200,220,240,260,280,300,320,340,360,380,400} 1 AppDataIntensive 1 1 VM_medium 1 1"
@@ -149,17 +149,17 @@ ScenarioTest.dataCentersList = "1 DataCenter_A ${r=0,10,20,31,41,51,61,72,82,92,
 
 [Config workload_1]
 **.bara = ${reg=0}
-ScenarioTest.userList = "10 User_A 5000 1 AppDataIntensive 1 1 VM_small 5 2 User_B 1150 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 3725 1 AppDataIntensive 1 1 VM_medium 2 2 User_D 125 1 AppDataIntensive 1 1 VM_medium 50 2 User_E ${reg} 1 AppDataIntensive 1 1 VM_large 1 10 User_F ${reg} 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G ${reg} 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H ${reg} 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I ${reg} 1 AppDataIntensive 1 1 VM_nano 1 1 User_J ${reg} 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
+ScenarioTest.userList = "10 User_A 5000 1 AppCPUIntensive 1 1 VM_small 5 2 User_B 1150 1 AppCPUIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 3725 1 AppCPUIntensive 1 1 VM_medium 2 2 User_D 125 1 AppCPUIntensive 1 1 VM_medium 50 2 User_E ${reg} 1 AppCPUIntensive 1 1 VM_large 1 10 User_F ${reg} 1 AppCPUIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G ${reg} 1 AppCPUIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H ${reg} 1 AppCPUIntensive 1 1 VM_nanoRAM 1 24 User_I ${reg} 1 AppCPUIntensive 1 1 VM_nano 1 1 User_J ${reg} 1 AppCPUIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
 [Config workload_2]
 **.bara = ${reg=1000}
-ScenarioTest.userList = "10 User_A ${reg} 1 AppDataIntensive 1 1 VM_small 5 2 User_B ${reg} 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C ${reg} 1 AppDataIntensive 1 1 VM_medium 2 2 User_D ${reg} 1 AppDataIntensive 1 1 VM_medium 50 2 User_E ${reg} 1 AppDataIntensive 1 1 VM_large 1 10 User_F ${reg} 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G ${reg} 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H ${reg} 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I ${reg} 1 AppDataIntensive 1 1 VM_nano 1 1 User_J ${reg} 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
+ScenarioTest.userList = "10 User_A ${reg} 1 AppCPUIntensive 1 1 VM_small 5 2 User_B ${reg} 1 AppCPUIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C ${reg} 1 AppCPUIntensive 1 1 VM_medium 2 2 User_D ${reg} 1 AppCPUIntensive 1 1 VM_medium 50 2 User_E ${reg} 1 AppCPUIntensive 1 1 VM_large 1 10 User_F ${reg} 1 AppCPUIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G ${reg} 1 AppCPUIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H ${reg} 1 AppCPUIntensive 1 1 VM_nanoRAM 1 24 User_I ${reg} 1 AppCPUIntensive 1 1 VM_nano 1 1 User_J ${reg} 1 AppCPUIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
 [Config workload_3]
-ScenarioTest.userList = "10 User_A 500 1 AppDataIntensive 1 1 VM_small 5 2 User_B 1500 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 1000 1 AppDataIntensive 1 1 VM_medium 2 2 User_D 2000 1 AppDataIntensive 1 1 VM_medium 50 2 User_E 100 1 AppDataIntensive 1 1 VM_large 1 10 User_F 900 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G 500 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H 500 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I 1000 1 AppDataIntensive 1 1 VM_nano 1 1 User_J 2000 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
+ScenarioTest.userList = "10 User_A 500 1 AppCPUIntensive 1 1 VM_small 5 2 User_B 1500 1 AppCPUIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 1000 1 AppCPUIntensive 1 1 VM_medium 2 2 User_D 2000 1 AppCPUIntensive 1 1 VM_medium 50 2 User_E 100 1 AppCPUIntensive 1 1 VM_large 1 10 User_F 900 1 AppCPUIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G 500 1 AppCPUIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H 500 1 AppCPUIntensive 1 1 VM_nanoRAM 1 24 User_I 1000 1 AppCPUIntensive 1 1 VM_nano 1 1 User_J 2000 1 AppCPUIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
 [Config workload_4]
-ScenarioTest.userList = "10 User_A 1 1 AppDataIntensive 1 1 VM_small 5 2 User_B 2490 1 AppDataIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 10 1 AppDataIntensive 1 1 VM_medium 2 2 User_D 1500 1 AppDataIntensive 1 1 VM_medium 50 2 User_E 100 1 AppDataIntensive 1 1 VM_large 1 10 User_F 1799 1 AppDataIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G 500 1 AppDataIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H 100 1 AppDataIntensive 1 1 VM_nanoRAM 1 24 User_I 500 1 AppDataIntensive 1 1 VM_nano 1 1 User_J 3000 1 AppDataIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
+ScenarioTest.userList = "10 User_A 1 1 AppCPUIntensive 1 1 VM_small 5 2 User_B 2490 1 AppCPUIntensive 1 2 VM_large 5 3 VM_medium 5 2 User_C 10 1 AppCPUIntensive 1 1 VM_medium 2 2 User_D 1500 1 AppCPUIntensive 1 1 VM_medium 50 2 User_E 100 1 AppCPUIntensive 1 1 VM_large 1 10 User_F 1799 1 AppCPUIntensive 1 2 VM_micro 2 2 VM_small 2 3 User_G 500 1 AppCPUIntensive 1 3 VM_micro 2 2 VM_medium 2 1 VM_small 2 2 User_H 100 1 AppCPUIntensive 1 1 VM_nanoRAM 1 24 User_I 500 1 AppCPUIntensive 1 1 VM_nano 1 1 User_J 3000 1 AppCPUIntensive 1 3 VM_large 5 3 VM_medium 5 3 VM_small 5 2 "
 
 [Config workload_2k]
 **.bara = ${reg= 200}
@@ -198,39 +198,39 @@ ScenarioTest.userGenerator.distribution = exponential(60.5s)
 ### DATACENTER
 [Config dc_n128_n1024]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A ${n=8,16,32,64} 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = ${n}
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = ${n}
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
 [Config dc_n128]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 8
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 8
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
 [Config dc_n256]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 16 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 16 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 16
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 16 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 16
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
 [Config dc_n384]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 24 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 24 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 24
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 24 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 24
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
 [Config dc_n512]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 32 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 16 16 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 32
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 16 16 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 32
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
 [Config dc_n1024]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 64 8 Node_A 500 64.0 4 60000 0 0 "
-ScenarioTest.dc_DataCenter_A_0.dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 32 16 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.numBoards = 64
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 32 16 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 64
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
 ###RESERVATION ORDER
 [Config normal_first]
@@ -241,7 +241,7 @@ ScenarioTest.cloudProvider.checkReservedFirst = true
 
 ###CPU SPEED
 [Config cpu_40000_60000]
-ScenarioTest.dc_DataCenter_A_0.rackCmp_Rack_A_*.board[*].blade[*].cpu.cpuCore[*].speed = ${40000,50000,60000,70000}
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = ${40000,50000,60000,70000}
 
 ###END BASE CONFIGS###
 
