Added cost and priority functionality

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -202,6 +202,12 @@ ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 R
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = ${n}
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
+[Config dc_n64]
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 8
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
+
 [Config dc_n128]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
