--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -255,6 +255,10 @@ ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[
 
 #### Cpu speed and nodes
 
+[Config test_w1s10hcpu40000cpu60000e_all]
+ScenarioTest.userGenerator.offerAcceptanceRate = 1
+extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+
 [Config test_w1s10hcpu40000cpu60000e]
 extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
 
