Added parameter for offer ratio acept

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -134,9 +134,15 @@ ScenarioTest.userGenerator.offerCostIncrease = 0.5
 	##   Configuration of the different test for Scenario
 	## ---------------------------------------------------------------
 
-[Config test_prueba] #1u-1h,1u-2h,2u-1h,2-1h,...
-extends = dc_n128
-ScenarioTest.userList = "1 User_A ${users=1,2,3,4} 1 AppCPUIntensive 1 1 VM_medium 1 ${time=1,2}"
+[Config test_prueba40000] #1u-1h,1u-2h,2u-1h,2-1h,...
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 40000
+extends = dc_n4
+ScenarioTest.userList = "1 User_A ${users=8,10,12,14} 1 AppCPUIntensive 1 1 VM_medium 1 ${time=1,2}"
+
+[Config test_prueba50000] #1u-1h,1u-2h,2u-1h,2-1h,...
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 50000
+extends = dc_n4
+ScenarioTest.userList = "1 User_A ${users=8,10,12,14} 1 AppCPUIntensive 1 1 VM_medium 1 ${time=1,2}"
 
 [Config test_prueba2]
 ScenarioTest.userList = "1 User_A Priority Slai05d02c03 ${users=1,20,40,60,80,100,120,140,160,180,200,220,240,260,280,300,320,340,360,380,400} 1 AppDataIntensive 1 1 VM_medium 1 1"
@@ -202,11 +208,17 @@ ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 R
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = ${n}
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
+[Config dc_n4]
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 2 1 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 2
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 1
+
 [Config dc_n64]
-ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 8 4 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = 8
-ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 4
 
 [Config dc_n128]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
