new simulation configs

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -69,6 +69,7 @@ ScenarioTest.userGenerator.maxSubTime_t3 = 55000
 ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 86400
 ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
 ScenarioTest.userGenerator.offerCostIncrease = 0.5
+ScenarioTestCost.userGenerator.shuffleUsers = false
 
 #ScenarioTest.userGenerator.intervalBetweenUsers = false
 #ScenarioTest.userGenerator.distribution = uniform(0d,7d)
@@ -269,9 +270,22 @@ ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[
 
 [Config test_w1s10hcpu40000cpu60000e_all]
 ScenarioTest.userGenerator.offerAcceptanceRate = 1
+ScenarioTest.userGenerator.shuffleUsers = false
 extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
 
 [Config test_w1s10hcpu40000cpu60000e]
+ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
+ScenarioTest.userGenerator.shuffleUsers = false
+extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+
+[Config test_w1s10hcpu40000cpu60000e_all_shuffle]
+ScenarioTest.userGenerator.offerAcceptanceRate = 1
+ScenarioTest.userGenerator.shuffleUsers = true
+extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+
+[Config test_w1s10hcpu40000cpu60000e_shuffle]
+ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
+ScenarioTest.userGenerator.shuffleUsers = false
 extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
 
 [Config test_w2s10hcpu40000cpu60000e]
