--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -285,7 +285,7 @@ extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
 
 [Config test_w1s10hcpu40000cpu60000e_shuffle]
 ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
-ScenarioTest.userGenerator.shuffleUsers = false
+ScenarioTest.userGenerator.shuffleUsers = true
 extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
 
 [Config test_w2s10hcpu40000cpu60000e]
