Improved management of subscription queue

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -135,10 +135,10 @@ ScenarioTestCost.userGenerator.shuffleUsers = false
 	##   Configuration of the different test for Scenario
 	## ---------------------------------------------------------------
 
-[Config test_prueba40000] #1u-1h,1u-2h,2u-1h,2-1h,...
-ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 40000
+[Config test_prueba] #1u-1h,1u-2h,2u-1h,2-1h,...
+ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = ${mips=40000,50000,60000,70000}
 extends = dc_n4
-ScenarioTest.userList = "1 User_A ${users=8,10,12,14} 1 AppCPUIntensive 1 1 VM_medium 1 ${time=1,2}"
+ScenarioTest.userList = "1 User_A ${users=8,10,12,14} 1 AppCPUIntensive 1 1 VM_medium 1 2"
 
 [Config test_prueba50000] #1u-1h,1u-2h,2u-1h,2-1h,...
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 50000
