--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -205,7 +205,7 @@ ScenarioTest.userGenerator.distribution = exponential(60.5s)
 ### DATACENTER
 [Config dc_n128_n1024]
 ScenarioTest.dataCentersList = "1 DataCenter_A 1 2 Rack_A ${n=8,16,32,64} 8 Node_A 500 64.0 4 60000 0 "
-ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCenter_A[*].dcManager.dataCenterConfig = "DataCenter_A 1 2 Rack_A ${n} 8 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].numBoards = ${n}
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
