Send the app to all VMs

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -62,7 +62,7 @@ ScenarioTest.userList = "1 User_A Priority Slai05d02c03 1 1 AppDataIntensive 1 1
 ################################################################
 ScenarioTest.userGenerator.allUsersArriveAtOnce = false
 ScenarioTest.userGenerator.intervalBetweenUsers = true
-ScenarioTest.userGenerator.distribution = uniform(55s,60s)
+ScenarioTest.userGenerator.distribution = 60s
 ScenarioTest.userGenerator.maxStartTime_t1 = 100000000
 ScenarioTest.userGenerator.nRentTime_t2 = 10000
 ScenarioTest.userGenerator.maxSubTime_t3 = 55000
@@ -136,9 +136,10 @@ ScenarioTestCost.userGenerator.shuffleUsers = false
 	## ---------------------------------------------------------------
 
 [Config test_prueba] #1u-1h,1u-2h,2u-1h,2-1h,...
-ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = ${mips=40000,50000,60000,70000}
-extends = dc_n4
-ScenarioTest.userList = "1 User_A ${users=8,10,12,14} 1 AppCPUIntensive 1 1 VM_medium 1 2"
+extends = dc_n256, sub_10h, cpu_40000_70000
+ScenarioTest.userGenerator.offerAcceptanceRate = 1
+ScenarioTest.userGenerator.distribution = 0s
+ScenarioTest.userList = "1 User_A ${users=1,50,100,5000} 1 AppCPUIntensive 1 1 VM_medium 2 2"
 
 [Config test_prueba50000] #1u-1h,1u-2h,2u-1h,2-1h,...
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 50000
@@ -259,7 +260,7 @@ ScenarioTest.cloudProvider.checkReservedFirst = false
 ScenarioTest.cloudProvider.checkReservedFirst = true
 
 ###CPU SPEED
-[Config cpu_40000_60000]
+[Config cpu_40000_70000]
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = ${40000,50000,60000,70000}
 
 ###END BASE CONFIGS###
@@ -271,31 +272,31 @@ ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[
 [Config test_w1s10hcpu40000cpu60000e_all]
 ScenarioTest.userGenerator.offerAcceptanceRate = 1
 ScenarioTest.userGenerator.shuffleUsers = false
-extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 
 [Config test_w1s10hcpu40000cpu60000e]
 ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
 ScenarioTest.userGenerator.shuffleUsers = false
-extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 
 [Config test_w1s10hcpu40000cpu60000e_all_shuffle]
 ScenarioTest.userGenerator.offerAcceptanceRate = 1
 ScenarioTest.userGenerator.shuffleUsers = true
-extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 
 [Config test_w1s10hcpu40000cpu60000e_shuffle]
 ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
 ScenarioTest.userGenerator.shuffleUsers = true
-extends = workload_1, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 
 [Config test_w2s10hcpu40000cpu60000e]
-extends = workload_2, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+extends = workload_2, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 
 [Config test_w3s10hcpu40000cpu60000e]
-extends = workload_3, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+extends = workload_3, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 
 [Config test_w4s10hcpu40000cpu60000e]
-extends = workload_4, sub_10h, cpu_40000_60000, dc_n128_n1024, exponencial
+extends = workload_4, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 
 ##### Subtime and nodes
 
