--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -269,6 +269,13 @@ ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[
 
 #### Cpu speed and nodes
 
+[Config test_w1s10hcpu40000cpu60000e_all_fixed]
+ScenarioTest.userGenerator.offerAcceptanceRate = 1
+ScenarioTest.userGenerator.shuffleUsers = false
+ScenarioTest.userGenerator.distribution = 60s
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024
+
+
 [Config test_w1s10hcpu40000cpu60000e_all]
 ScenarioTest.userGenerator.offerAcceptanceRate = 1
 ScenarioTest.userGenerator.shuffleUsers = false
