Added subscription time monitoring

--- a/simulations/ScenarioTest/omnetpp.ini
+++ b/simulations/ScenarioTest/omnetpp.ini
@@ -136,10 +136,10 @@ ScenarioTestCost.userGenerator.shuffleUsers = false
 	## ---------------------------------------------------------------
 
 [Config test_prueba] #1u-1h,1u-2h,2u-1h,2-1h,...
-extends = dc_n256, sub_10h, cpu_40000_70000
+extends = dc_n4, sub_10h, cpu_40000_70000
 ScenarioTest.userGenerator.offerAcceptanceRate = 1
 ScenarioTest.userGenerator.distribution = 0s
-ScenarioTest.userList = "1 User_A ${users=1,50,100,5000} 1 AppCPUIntensive 1 1 VM_medium 2 2"
+ScenarioTest.userList = "1 User_A ${users=1,50,100,1000} 1 AppCPUIntensive 1 1 VM_medium 2 2"
 
 [Config test_prueba50000] #1u-1h,1u-2h,2u-1h,2-1h,...
 ScenarioTest.dc_DataCenter_A[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 50000
@@ -202,6 +202,9 @@ ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 864000
 
 [Config exponencial]
 ScenarioTest.userGenerator.distribution = exponential(60.5s)
+
+[Config uniforme]
+ScenarioTest.userGenerator.distribution = uniform(50s, 60s)
 
 ### DATACENTER
 [Config dc_n128_n1024]
@@ -294,7 +297,31 @@ extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
 [Config test_w1s10hcpu40000cpu60000e_shuffle]
 ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
 ScenarioTest.userGenerator.shuffleUsers = true
-extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024, uniforme
+
+[Config test_w1s10hcpu40000cpu60000e_shuffle1]
+ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
+ScenarioTest.userGenerator.shuffleUsers = true
+ScenarioTest.userGenerator.distribution = uniform(40s, 50s)
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024
+
+[Config test_w1s10hcpu40000cpu60000e_shuffle2]
+ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
+ScenarioTest.userGenerator.shuffleUsers = true
+ScenarioTest.userGenerator.distribution = uniform(30s, 40s)
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024
+
+[Config test_w1s10hcpu40000cpu60000e_shuffle3]
+ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
+ScenarioTest.userGenerator.shuffleUsers = true
+ScenarioTest.userGenerator.distribution = uniform(20s, 30s)
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024
+
+[Config test_w1s10hcpu40000cpu60000e_shuffle4]
+ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
+ScenarioTest.userGenerator.shuffleUsers = true
+ScenarioTest.userGenerator.distribution = uniform(10s, 60s)
+extends = workload_1, sub_10h, cpu_40000_70000, dc_n128_n1024
 
 [Config test_w2s10hcpu40000cpu60000e]
 extends = workload_2, sub_10h, cpu_40000_70000, dc_n128_n1024, exponencial
