Added real traces with costs
Fix GUI parsing App

Add cycles activation.

Changed parameter name maxSubscriptionTime

Keep peerj experiments and added new cyclic experiment

More experiments.

Added machinesInUse data

Archer experiment

Allow any number of cores in cpus.
Make metadata optional.

Smaller scenario for test added

Fix model

Experiments

Time Series Forecasting Algorithm

Fix hypervisor map and active machines

Added config to manage active machines.

Fix scheduleAt

Improved subscription queue management

New scenarios

new scenarios

new scenarios

Improve error message

Fix dup method

Fix forecasting machines

Fix minactivemachine parameter

improvement in machine forecasting

Fix activeMachines

Scenarios

Added traces with costs

scripts and scenarios

Clean

Fix

Fix

Fix

Fix scenarios

Fix scenario

Fix subscription time

New scenarios

Log messages

Debug

Fix subscription queue management

Fix output

Fix output

Fix output

Add max number of vms

remove debug info

ini

Fix app

Fix scenario storage

Fix available cores count

Fix scenario workload

change scenario workload

Changed scenario

Resolve conflicts

--- a/simulations/ScenarioTestCost/omnetpp.ini
+++ b/simulations/ScenarioTestCost/omnetpp.ini
@@ -66,7 +66,7 @@ ScenarioTest.userGenerator.distribution = uniform(55s,60s)
 ScenarioTest.userGenerator.maxStartTime_t1 = 100000000
 ScenarioTest.userGenerator.nRentTime_t2 = 10000
 ScenarioTest.userGenerator.maxSubTime_t3 = 55000
-ScenarioTest.userGenerator.maxSubscriptionTime_t4 = 86400
+ScenarioTest.userGenerator.maxSubscriptionTime = 86400
 ScenarioTest.userGenerator.offerAcceptanceRate = 0.9
 ScenarioTest.userGenerator.offerCostIncrease = 0.5
 
@@ -135,7 +135,7 @@ ScenarioTest.userGenerator.offerCostIncrease = 0.5
 	## ---------------------------------------------------------------
 
 [Config test_prueba] #1u-1h,1u-2h,2u-1h,2-1h,...
-extends = dc_n128
+extends = dc_n4096
 ScenarioTest.userList = "1 User_A Regular Slai0d0c0 ${users=1,2,3,4} 1 AppCPUIntensive 1 1 VM_medium 2 ${time=1,2}"
 
 [Config test_prueba2]
@@ -202,6 +202,7 @@ ScenarioTest.dc_DataCentre_A[*].dcManager.dataCentreConfig = "DataCentre_A 1 2 R
 ScenarioTest.dc_DataCentre_A[*].rackCmp_Rack_A[*].numBoards = ${n}
 ScenarioTest.dc_DataCentre_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
 
+
 [Config dc_n128]
 ScenarioTest.dataCentresList = "1 DataCentre_A 128 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCentre_A[*].dcManager.dataCentreConfig = "DataCentre_A 128 1 2 Rack_A 8 8 Node_A 500 64.0 4 60000 0 "
@@ -231,6 +232,13 @@ ScenarioTest.dataCentresList = "1 DataCentre_A 1 2 Rack_A 64 8 Node_A 500 64.0 4
 ScenarioTest.dc_DataCentre_A[*].dcManager.dataCentreConfig = "DataCentre_A 1 2 Rack_A 32 16 Node_A 500 64.0 4 60000 0 "
 ScenarioTest.dc_DataCentre_A[*].rackCmp_Rack_A[*].numBoards = 64
 ScenarioTest.dc_DataCentre_A[*].rackCmp_Rack_A[*].bladesPerBoard = 8
+
+[Config dc_n4096]
+ScenarioTest.dataCentresList = "1 DataCentre_A 1 2 Rack_A 64 32 Node_A 500 64.0 4 60000 0 0 "
+ScenarioTest.dc_DataCentre_A[*].dcManager.dataCentreConfig = "DataCentre_A 1 2 Rack_A 32 16 Node_A 500 64.0 4 60000 0 "
+ScenarioTest.dc_DataCentre_A[*].rackCmp_Rack_A[*].numBoards = 64
+ScenarioTest.dc_DataCentre_A[*].rackCmp_Rack_A[*].bladesPerBoard = 32
+
 
 ###RESERVATION ORDER
 [Config normal_first]
