fix(FogNode): Fixed request lifetime to the cloud
Now the whole (simple) ecosystem (Edge-Fog-"Cloud") can interact
between each other. The parametric example is in the ScenarioTestFog
with also a test of channel statistical recollection.

--- a/simulations/ScenarioTestFog/omnetpp.ini
+++ b/simulations/ScenarioTestFog/omnetpp.ini
@@ -149,4 +149,16 @@ ScenarioTest.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].appsVectors[*]
 
 [Config TestEdgeFog]
 network = ScenarioTestEdgeFog
-sim-time-limit = 1000s
+sim-time-limit = 500s
+ScenarioTestEdgeFog.**.bandwidthPercentage.result-recording-modes = all,+vector
+ScenarioTestEdgeFog.**.bandwidthPercentage.statistic-recording = true
+ScenarioTestEdgeFog.**.statistic-recording = true
+ScenarioTestEdgeFog.**.scalar-recording = true
+ScenarioTestEdgeFog.**.vector-recording = true
+# Records the bytes being sent through this specific channel attached to this module gate
+#ScenarioTestEdgeFog.controller.toFog.channel.packetBytes.statistic-recording = true
+#ScenarioTestEdgeFog.controller.toFog.channel.packetBytes.scalar-recording = true
+#ScenarioTestEdgeFog.controller.toFog.channel.packetBytes.vector-recording = true
+#ScenarioTestEdgeFog.controller.toFog.**.result-recording-modes = default
+#ScenarioTestEdgeFog.controller.toFog.**.statistic-recording = true
+
